microservices/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: webapp
  type: ClusterIP
