microservices/webapp/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: webapp.com
      http:
        paths:
        - path: /
          backend:
            serviceName: fleetman-webapp
            servicePort: 80
